--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,8 @@ services:
       - "80:5000"
     network_mode: host
     environment:
-      - MODEL=CodeLlama-7b
+      - CODEMODEL=CodeLlama-7b
+      - MODEL=llama-2-7b-chat
     volumes:
       - ./CodeLlama-7b:/app/CodeLlama-7b
     deploy:
