changes for chat

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,6 +1,6 @@
-CodeLlama-34b-Python/
-
-CodeLlama-7b/
-CodeLlama-7b-Python/
-CodeLlama-7b-Instruct/
+codeLlama/CodeLlama-34b-Python/
+codeLlama/CodeLlama-7b/
+codeLlama/CodeLlama-7b-Python/
+codeLlama/CodeLlama-7b-Instruct/
+llama/llama-2-7b-chat
 
