--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,9 +8,10 @@ services:
     network_mode: host
     environment:
       - CODEMODEL=CodeLlama-7b
-      - MODEL=llama-2-7b-chat
+      - CHATMODEL=llama-2-7b-chat
     volumes:
-      - ./CodeLlama-7b:/app/CodeLlama-7b
+      - ./codeLlama/CodeLlama-7b:/app/codeLlama/CodeLlama-7b
+      - ./llama/llama-2-7b-chat:/app/llama/llama-2-7b-chat
     deploy:
       resources:
         reservations:
