--- a/.gitignore
+++ b/.gitignore
@@ -158,7 +158,8 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
-CodeLlama-34b-Python/
-CodeLlama-7b-Instruct/
-CodeLlama-7b-Python/
-CodeLlama-7b/
+codeLlama/CodeLlama-34b-Python/
+codeLlama/CodeLlama-7b-Instruct/
+codeLlama/CodeLlama-7b-Python/
+codeLlama/CodeLlama-7b/
+llama/llama-2-7b-chat
