--- a/codeLlama/Dockerfile
+++ b/codeLlama/Dockerfile
@@ -16,14 +16,13 @@ RUN apt-get update && \
 COPY . /app/
 
 VOLUME ./codeLlama/$CODEMODEL:/app/codeLlama/$CODEMODEL
-VOLUME ./llama/$CHATMODEL:/app/llama/$CHATMODEL
 
 RUN pip install -e .
 
 EXPOSE 5000
 
 RUN echo '#!/bin/sh' > /app/entrypoint.sh && \
-    echo 'torchrun --nproc_per_node 1 server.py --ckpt_dir /app/codeLlama/$CODEMODEL/ --ckpt_dir_chat /app/llama/$CHATMODEL/ --tokenizer_path /app/codeLlama/$CODEMODEL/tokenizer.model --tokenizer_path_chat /app/lama/$CHATMODEL/tokenizer.model --max_seq_len 128 --max_batch_size 4' >> /app/entrypoint.sh && \
+    echo 'torchrun --nproc_per_node 1 server.py --ckpt_dir /app/codeLlama/$CODEMODEL/ --tokenizer_path /app/codeLlama/$CODEMODEL/tokenizer.model --max_seq_len 128 --max_batch_size 4' >> /app/entrypoint.sh && \
     chmod +x /app/entrypoint.sh
 
 # Set the entrypoint and default command
