--- a/.dockerignore
+++ b/.dockerignore
@@ -2,5 +2,5 @@ codeLlama/CodeLlama-34b-Python/
 codeLlama/CodeLlama-7b/
 codeLlama/CodeLlama-7b-Python/
 codeLlama/CodeLlama-7b-Instruct/
-llama/llama-2-7b-chat
+llama/llama-2-7b-chat/
 
